WIP: + Added schedule command service with stubbed implementation (not actually timing things yet, but running commands kind of works) + schedule command itself - need to figure out sub command stuff.

--- a/WinstonBot.csproj
+++ b/WinstonBot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ChronoExtensions" Version="1.0.0" />
     <PackageReference Include="Discord.Net.Labs" Version="3.1.1" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.55.0.2371" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
