--- a/WinstonBot.csproj
+++ b/WinstonBot.csproj
@@ -10,12 +10,13 @@
 
   <ItemGroup>
     <PackageReference Include="ChronoExtensions" Version="1.0.0" />
-    <PackageReference Include="Discord.Addons.Hosting" Version="4.0.2" />
+    <PackageReference Include="Discord.Addons.Hosting" Version="4.0.2-labs" />
     <PackageReference Include="Discord.Net.Labs" Version="3.1.7" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.55.0.2371" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-rc.2.21480.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0-rc.2.21480.5" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-rc.2.21480.5" />
+    <PackageReference Include="NReco.Logging.File" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
