--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ Config/token.txt
 Config/test_token.txt
 Config/google_credentials.json
 Config/appsettings.*.json
+Properties/launchSettings.json
