--- a/Config/appsettings.json
+++ b/Config/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "google_credentials_path": "Config/google_credentials.json",
   "scheduled_events_path": "Config/ScheduledEvents.json",
-  "guild_config_path":  "Config/config.json"
+  "guild_config_path": "Config/config.json",
+  "watchcat_path": "Config/WatchCatDB.json",
 }
