Added event control implementation for suspending users from events.

--- a/Config/appsettings.json
+++ b/Config/appsettings.json
@@ -3,4 +3,5 @@
   "scheduled_events_path": "Config/ScheduledEvents.json",
   "guild_config_path": "Config/config.json",
   "watchcat_path": "Config/WatchCatDB.json",
+  "event_suspension_db_path": "Config/EventSuspensionDB.json"
 }
